// Copyright 2023 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// Generated by the C++ microgenerator.
// If you make any local changes, they will be lost.
// file:///workspace/generator/discovery/compute_public_google_rest_v1.json
// revision: 20231110

syntax = "proto3";

package google.cloud.cpp.compute.snapshots.v1;

import "google/api/annotations.proto";
import "google/api/client.proto";
import "google/api/field_behavior.proto";
import "google/cloud/compute/v1/internal/common_007.proto";
import "google/cloud/compute/v1/internal/common_016.proto";
import "google/cloud/compute/v1/internal/common_045.proto";
import "google/cloud/compute/v1/internal/common_046.proto";
import "google/cloud/compute/v1/internal/common_110.proto";
import "google/cloud/compute/v1/internal/common_111.proto";
import "google/cloud/compute/v1/internal/common_131.proto";
import "google/cloud/extended_operations.proto";

// Service for the snapshots resource.
// https://cloud.google.com/compute/docs/reference/rest/v1/snapshots
service Snapshots {
  option (google.api.default_host) = "compute.googleapis.com";
  option (google.api.oauth_scopes) =
      "https://www.googleapis.com/auth/cloud-platform,"
      "https://www.googleapis.com/auth/compute,"
      "https://www.googleapis.com/auth/compute.readonly";

  // Deletes the specified Snapshot resource. Keep in mind that deleting a
  // single snapshot might not necessarily delete all the data on that snapshot.
  // If any data on the snapshot that is marked for deletion is needed for
  // subsequent snapshots, the data will be moved to the next corresponding
  // snapshot. For more information, see Deleting snapshots.
  // https://cloud.google.com/compute/docs/reference/rest/v1/snapshots/delete
  rpc DeleteSnapshot(DeleteSnapshotRequest)
      returns (google.cloud.cpp.compute.v1.Operation) {
    option (google.api.http) = {
      delete: "/compute/v1/projects/{project}/global/snapshots/{snapshot}"
    };
    option (google.api.method_signature) = "project,snapshot";
    option (google.cloud.operation_service) = "GlobalOperations";
  }

  // Returns the specified Snapshot resource.
  // https://cloud.google.com/compute/docs/reference/rest/v1/snapshots/get
  rpc GetSnapshot(GetSnapshotRequest)
      returns (google.cloud.cpp.compute.v1.Snapshot) {
    option (google.api.http) = {
      get: "/compute/v1/projects/{project}/global/snapshots/{snapshot}"
    };
    option (google.api.method_signature) = "project,snapshot";
  }

  // Gets the access control policy for a resource. May be empty if no such
  // policy or resource exists.
  // https://cloud.google.com/compute/docs/reference/rest/v1/snapshots/getIamPolicy
  rpc GetIamPolicy(GetIamPolicyRequest)
      returns (google.cloud.cpp.compute.v1.Policy) {
    option (google.api.http) = {
      get: "/compute/v1/projects/{project}/global/snapshots/{resource}/getIamPolicy"
    };
    option (google.api.method_signature) = "project,resource";
  }

  // Creates a snapshot in the specified project using the data included in the
  // request. For regular snapshot creation, consider using this method instead
  // of disks.createSnapshot, as this method supports more features, such as
  // creating snapshots in a project different from the source disk project.
  // https://cloud.google.com/compute/docs/reference/rest/v1/snapshots/insert
  rpc InsertSnapshot(InsertSnapshotRequest)
      returns (google.cloud.cpp.compute.v1.Operation) {
    option (google.api.http) = {
      post: "/compute/v1/projects/{project}/global/snapshots"
      body: "snapshot_resource"
    };
    option (google.api.method_signature) = "project,snapshot_resource";
    option (google.cloud.operation_service) = "GlobalOperations";
  }

  // Retrieves the list of Snapshot resources contained within the specified
  // project.
  // https://cloud.google.com/compute/docs/reference/rest/v1/snapshots/list
  rpc ListSnapshots(ListSnapshotsRequest)
      returns (google.cloud.cpp.compute.v1.SnapshotList) {
    option (google.api.http) = {
      get: "/compute/v1/projects/{project}/global/snapshots"
    };
    option (google.api.method_signature) = "project";
  }

  // Sets the access control policy on the specified resource. Replaces any
  // existing policy.
  // https://cloud.google.com/compute/docs/reference/rest/v1/snapshots/setIamPolicy
  rpc SetIamPolicy(SetIamPolicyRequest)
      returns (google.cloud.cpp.compute.v1.Policy) {
    option (google.api.http) = {
      post: "/compute/v1/projects/{project}/global/snapshots/{resource}/setIamPolicy"
      body: "global_set_policy_request_resource"
    };
    option (google.api.method_signature) =
        "project,resource,global_set_policy_request_resource";
  }

  // Sets the labels on a snapshot. To learn more about labels, read the
  // Labeling Resources documentation.
  // https://cloud.google.com/compute/docs/reference/rest/v1/snapshots/setLabels
  rpc SetLabels(SetLabelsRequest)
      returns (google.cloud.cpp.compute.v1.Operation) {
    option (google.api.http) = {
      post: "/compute/v1/projects/{project}/global/snapshots/{resource}/setLabels"
      body: "global_set_labels_request_resource"
    };
    option (google.api.method_signature) =
        "project,resource,global_set_labels_request_resource";
    option (google.cloud.operation_service) = "GlobalOperations";
  }

  // Returns permissions that a caller has on the specified resource.
  // https://cloud.google.com/compute/docs/reference/rest/v1/snapshots/testIamPermissions
  rpc TestIamPermissions(TestIamPermissionsRequest)
      returns (google.cloud.cpp.compute.v1.TestPermissionsResponse) {
    option (google.api.http) = {
      post: "/compute/v1/projects/{project}/global/snapshots/{resource}/testIamPermissions"
      body: "test_permissions_request_resource"
    };
    option (google.api.method_signature) =
        "project,resource,test_permissions_request_resource";
  }
}

// Request message for DeleteSnapshot.
message DeleteSnapshotRequest {
  // Project ID for this request.
  string project = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.cloud.operation_request_field) = "project",
    json_name = "project"
  ];

  // An optional request ID to identify requests. Specify a unique request ID so
  // that if you must retry your request, the server will know to ignore the
  // request if it has already been completed. For example, consider a situation
  // where you make an initial request and the request times out. If you make
  // the request again with the same request ID, the server can check if
  // original operation with the same request ID was received, and if so, will
  // ignore the second request. This prevents clients from accidentally creating
  // duplicate commitments. The request ID must be a valid UUID with the
  // exception that zero UUID is not supported (
  // 00000000-0000-0000-0000-000000000000).
  optional string request_id = 2 [json_name = "requestId"];

  // Name of the Snapshot resource to delete.
  string snapshot = 3
      [(google.api.field_behavior) = REQUIRED, json_name = "snapshot"];
}

// Request message for GetIamPolicy.
message GetIamPolicyRequest {
  // Requested IAM Policy version.
  optional int32 options_requested_policy_version = 1
      [json_name = "optionsRequestedPolicyVersion"];

  // Project ID for this request.
  string project = 2
      [(google.api.field_behavior) = REQUIRED, json_name = "project"];

  // Name or id of the resource for this request.
  string resource = 3
      [(google.api.field_behavior) = REQUIRED, json_name = "resource"];
}

// Request message for GetSnapshot.
message GetSnapshotRequest {
  // Project ID for this request.
  string project = 1
      [(google.api.field_behavior) = REQUIRED, json_name = "project"];

  // Name of the Snapshot resource to return.
  string snapshot = 2
      [(google.api.field_behavior) = REQUIRED, json_name = "snapshot"];
}

// Request message for InsertSnapshot.
message InsertSnapshotRequest {
  // Project ID for this request.
  string project = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.cloud.operation_request_field) = "project",
    json_name = "project"
  ];

  // An optional request ID to identify requests. Specify a unique request ID so
  // that if you must retry your request, the server will know to ignore the
  // request if it has already been completed. For example, consider a situation
  // where you make an initial request and the request times out. If you make
  // the request again with the same request ID, the server can check if
  // original operation with the same request ID was received, and if so, will
  // ignore the second request. This prevents clients from accidentally creating
  // duplicate commitments. The request ID must be a valid UUID with the
  // exception that zero UUID is not supported (
  // 00000000-0000-0000-0000-000000000000).
  optional string request_id = 2 [json_name = "requestId"];

  // The Snapshot for this request.
  optional google.cloud.cpp.compute.v1.Snapshot snapshot_resource = 3
      [json_name = "__json_request_body"];
}

// Request message for ListSnapshots.
message ListSnapshotsRequest {
  // A filter expression that filters resources listed in the response. Most
  // Compute resources support two types of filter expressions: expressions that
  // support regular expressions and expressions that follow API improvement
  // proposal AIP-160. These two types of filter expressions cannot be mixed in
  // one request. If you want to use AIP-160, your expression must specify the
  // field name, an operator, and the value that you want to use for filtering.
  // The value must be a string, a number, or a boolean. The operator must be
  // either `=`, `!=`, `>`, `<`, `<=`, `>=` or `:`. For example, if you are
  // filtering Compute Engine instances, you can exclude instances named
  // `example-instance` by specifying `name != example-instance`. The `:*`
  // comparison can be used to test whether a key has been defined. For example,
  // to find all objects with `owner` label use: ``` labels.owner:* ``` You can
  // also filter nested fields. For example, you could specify
  // `scheduling.automaticRestart = false` to include instances only if they are
  // not scheduled for automatic restarts. You can use filtering on nested
  // fields to filter based on resource labels. To filter on multiple
  // expressions, provide each separate expression within parentheses. For
  // example: ``` (scheduling.automaticRestart = true) (cpuPlatform = "Intel
  // Skylake") ``` By default, each expression is an `AND` expression. However,
  // you can include `AND` and `OR` expressions explicitly. For example: ```
  // (cpuPlatform = "Intel Skylake") OR (cpuPlatform = "Intel Broadwell") AND
  // (scheduling.automaticRestart = true) ``` If you want to use a regular
  // expression, use the `eq` (equal) or `ne` (not equal) operator against a
  // single un-parenthesized expression with or without quotes or against
  // multiple parenthesized expressions. Examples: `fieldname eq unquoted
  // literal` `fieldname eq 'single quoted literal'` `fieldname eq "double
  // quoted literal"` `(fieldname1 eq literal) (fieldname2 ne "literal")` The
  // literal value is interpreted as a regular expression using Google RE2
  // library syntax. The literal value must match the entire field. For example,
  // to filter for instances that do not end with name "instance", you would use
  // `name ne .*instance`. You cannot combine constraints on multiple fields
  // using regular expressions.
  optional string filter = 1 [json_name = "filter"];

  // The maximum number of results per page that should be returned. If the
  // number of available results is larger than `maxResults`, Compute Engine
  // returns a `nextPageToken` that can be used to get the next page of results
  // in subsequent list requests. Acceptable values are `0` to `500`, inclusive.
  // (Default: `500`)
  optional uint32 max_results = 2 [json_name = "maxResults"];

  // Sorts list results by a certain order. By default, results are returned in
  // alphanumerical order based on the resource name. You can also sort results
  // in descending order based on the creation timestamp using
  // `orderBy="creationTimestamp desc"`. This sorts results based on the
  // `creationTimestamp` field in reverse chronological order (newest result
  // first). Use this to sort resources like operations so that the newest
  // operation is returned first. Currently, only sorting by `name` or
  // `creationTimestamp desc` is supported.
  optional string order_by = 3 [json_name = "orderBy"];

  // Specifies a page token to use. Set `pageToken` to the `nextPageToken`
  // returned by a previous list request to get the next page of results.
  optional string page_token = 4 [json_name = "pageToken"];

  // Project ID for this request.
  string project = 5
      [(google.api.field_behavior) = REQUIRED, json_name = "project"];

  // Opt-in for partial success behavior which provides partial results in case
  // of failure. The default value is false.
  optional bool return_partial_success = 6 [json_name = "returnPartialSuccess"];
}

// Request message for SetIamPolicy.
message SetIamPolicyRequest {
  // The GlobalSetPolicyRequest for this request.
  optional google.cloud.cpp.compute.v1.GlobalSetPolicyRequest
      global_set_policy_request_resource = 1
      [json_name = "__json_request_body"];

  // Project ID for this request.
  string project = 2
      [(google.api.field_behavior) = REQUIRED, json_name = "project"];

  // Name or id of the resource for this request.
  string resource = 3
      [(google.api.field_behavior) = REQUIRED, json_name = "resource"];
}

// Request message for SetLabels.
message SetLabelsRequest {
  // The GlobalSetLabelsRequest for this request.
  optional google.cloud.cpp.compute.v1.GlobalSetLabelsRequest
      global_set_labels_request_resource = 1
      [json_name = "__json_request_body"];

  // Project ID for this request.
  string project = 2 [
    (google.api.field_behavior) = REQUIRED,
    (google.cloud.operation_request_field) = "project",
    json_name = "project"
  ];

  // Name or id of the resource for this request.
  string resource = 3
      [(google.api.field_behavior) = REQUIRED, json_name = "resource"];
}

// Request message for TestIamPermissions.
message TestIamPermissionsRequest {
  // Project ID for this request.
  string project = 1
      [(google.api.field_behavior) = REQUIRED, json_name = "project"];

  // Name or id of the resource for this request.
  string resource = 2
      [(google.api.field_behavior) = REQUIRED, json_name = "resource"];

  // The TestPermissionsRequest for this request.
  optional google.cloud.cpp.compute.v1.TestPermissionsRequest
      test_permissions_request_resource = 3 [json_name = "__json_request_body"];
}
